--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -13,5 +13,6 @@ rootLogger.level = debug
 rootLogger.appenderRef.console.ref = STDOUT
 rootLogger.appenderRef.file.ref = FILE
 
-logger.org.springframework.name = org.springframework
-logger.org.springframework.level = info
+# Definición de logger para Spring con un alias "spring"
+logger.spring.name = org.springframework
+logger.spring.level = info
