--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=StudentLoanManagement
 
 # MySQL connection
-spring.datasource.url=jdbc:mysql:/mv
+spring.datasource.url=jdbc:mysql://localhost:3306/mv
 spring.datasource.username=e3
 spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
