basic dependencies + DB changes

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,18 +1,25 @@
+# Root logger
+status = error
+name = PropertiesConfig
+
+# Appender para la consola (STDOUT)
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss,SSS} (%t) %-5p [%c] - %m%n
 
+# Appender para el archivo
 appender.file.type = File
 appender.file.name = FILE
 appender.file.fileName = logs/application.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d{HH:mm:ss,SSS} (%t) %-5p [%c] - %m%n
 
+# Asignación de los appenders al logger raíz
 rootLogger.level = debug
 rootLogger.appenderRef.console.ref = STDOUT
 rootLogger.appenderRef.file.ref = FILE
 
-# Definición de logger para Spring con un alias "spring"
+# Logger específico para Spring (se usa por defecto con Spring Boot)
 logger.spring.name = org.springframework
 logger.spring.level = info
