--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
+# Nombre y puerto de la aplicación
 spring.application.name=StudentLoanManagement
+server.port=8080
 
-# MySQL connection
+# Conexión a la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mv
 spring.datasource.username=e3
 spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de Hibernate/JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Desactivar compresión de contenido
+spring.servlet.multipart.enabled=true
+spring.thymeleaf.cache=false
