--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,14 @@
 spring.application.name=StudentLoanManagement
 server.port=8080
 
-# Conexión a la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/mv
+# Configuración de la Base de Datos
+spring.datasource.url=jdbc:mysql://localhost:3306/mv?useSSL=false&serverTimezone=UTC
 spring.datasource.username=e3
 spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de Hibernate/JPA
+# Configuración de Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-# Desactivar compresión de contenido
-spring.servlet.multipart.enabled=true
-spring.thymeleaf.cache=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
