--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=StudentLoanManagement
 server.port=8080
 
 # Configuración de la Base de Datos
-spring.datasource.url=jdbc:mysql://localhost:3306/mv?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/mv
 spring.datasource.username=e3
 spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
