23-db mySQL configuration + some test data

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,19 @@
-# Nombre y puerto de la aplicación
+# Name of the application
 spring.application.name=StudentLoanManagement
-server.port=8080
 
 # Configuración de la Base de Datos
-spring.datasource.url=jdbc:mysql://localhost:3306/mv
+spring.datasource.url=jdbc:mysql://localhost:3306/mv?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=e3
 spring.datasource.password=e3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración de Hibernate
-spring.jpa.hibernate.ddl-auto=update
+# JPA Settings
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Springdoc Swagger API Config
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
