--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -123,7 +123,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Spring Boot DevTools (solo en desarrollo) -->
+        <!-- Spring Boot DevTools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
