--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,7 +37,6 @@
             <version>1.3.2</version>
         </dependency>
 
-
 		<!-- MySQL Dependencies -->
 		<dependency>
             <groupId>com.mysql</groupId>
@@ -49,13 +48,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+      
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -63,7 +61,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.16.1</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -71,7 +69,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.16.1</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -79,7 +77,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.27.3</version>
+            <version>3.25.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -104,7 +102,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.9</version> <!-- Asegúrate de usar la última versión compatible -->
+            <version>1.6.9</version>
         </dependency>
 
         <!-- Log4j2 (Reemplaza Logback) -->
@@ -143,17 +141,13 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Plugin Surefire para ejecutar los tests -->
+            <!-- Plugin Surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version> <!-- Asegúrate de tener la versión correcta -->
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <useModulePath>false</useModulePath> <!-- Deshabilitar módulo si usas JDK 9+ -->
-                    <includes>
-                        <include>**/*Test.java</include> <!-- Incluir todas las clases de prueba con sufijo Test -->
-                    </includes>
-                    
+                    <useJUnitPlatform>true</useJUnitPlatform>
                 </configuration>
             </plugin>
 
@@ -170,6 +164,10 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <destFile>${project.build.directory}/jacoco.exec</destFile>
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
                     </execution>
 
                     <!-- Prepare report of coverage -->
