--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,14 +30,7 @@
             <version>1.3</version>
         </dependency>
 
-        <!-- @PostConstruct Dependencies -->
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-		<!-- MySQL Dependencies -->
+        <!-- MySQL Dependencies -->
 		<dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -105,7 +98,7 @@
             <version>1.6.9</version>
         </dependency>
 
-        <!-- Log4j2 (Reemplaza Logback) -->
+        <!-- Log4j2 (Replace Logback) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
@@ -135,12 +128,6 @@
 
     <build>
         <plugins>
-            <!-- Maven surefire plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
-            </plugin>
             <!-- Spring Boot plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -151,9 +138,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.2.5</version>
                 <configuration>
-                    <useJUnitPlatform>true</useJUnitPlatform>
+                    <argLine>${surefireArgLine}</argLine>
                 </configuration>
             </plugin>
 
@@ -162,11 +149,9 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.12</version>
-
                 <executions>
-                    <!-- Prepare agent of coverage -->
                     <execution>
-                        <id>prepare-agent</id>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -175,38 +160,38 @@
                             <propertyName>surefireArgLine</propertyName>
                         </configuration>
                     </execution>
-
-                    <!-- Prepare report of coverage -->
+                    
                     <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
+                        <id>default-report</id>
+                        <phase>test</phase>  <!-- Cambiado de verify a test -->
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                        </configuration>
                     </execution>
 
-                    <!-- Check lowest coberage -->
                     <execution>
-                        <id>check</id>
+                        <id>jacoco-check</id>
                         <goals>
                             <goal>check</goal>
                         </goals>
                         <configuration>
                             <rules>
                                 <rule>
-                                    <element>PACKAGE</element>
+                                    <element>BUNDLE</element>  <!-- Cambiado de PACKAGE a BUNDLE -->
                                     <limits>
                                         <limit>
                                             <counter>LINE</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.80</minimum> <!-- Require at least 80% coverage -->
+                                            <minimum>0.65</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
                             </rules>
                         </configuration>
                     </execution>
-
                 </executions>
             </plugin>
 
