pom.xml updated with dpendencies for performance testing

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -165,6 +165,14 @@
             <artifactId>spring-security-crypto</artifactId>
         </dependency>
 
+		
+		<dependency>
+			<groupId>com.github.noconnor</groupId>
+			<artifactId>junitperf-junit5</artifactId>
+			<version>1.37.0</version>
+			<scope>test</scope>
+		</dependency>
+
     </dependencies>
 
     <build>
