--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=StudentLoanManagement
 
 # Configuración de la Base de Datos
 spring.datasource.url=jdbc:mysql://localhost:3306/mv?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=e3
-spring.datasource.password=e3
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Settings
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -18,3 +18,10 @@ logging.level.org.hibernate=INFO
 springdoc.api-docs.path=/api-docs
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreply.loanmanagement@gmail.com
+spring.mail.password=noxz qnlh dlqp qukc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
