--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,10 +105,10 @@
         </dependency>
 
         <!-- Log4j2 (Replace Logback) -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
 
         <!-- Excluir Logback -->
         <dependency>
@@ -159,19 +159,30 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- BCrypt para encriptar contraseñas -->
+        <!-- BCrypt encrypt passwords -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-crypto</artifactId>
         </dependency>
 
-		
+		<!-- junitperf-junit5  -->
 		<dependency>
 			<groupId>com.github.noconnor</groupId>
 			<artifactId>junitperf-junit5</artifactId>
 			<version>1.37.0</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				</exclusion>
+				<exclusion>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
 
     </dependencies>
 
