--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -251,7 +251,7 @@
 										<limit>
 											<counter>LINE</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.8</minimum>
+											<minimum>0.6</minimum>
 										</limit>
 									</limits>
 								</rule>
@@ -266,7 +266,7 @@
             </plugin>
 
 			<!-- JDepend for design quality metrics -->
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
 				<version>2.1</version>
@@ -279,6 +279,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 
 			<!-- PMD for static code analysis -->
 			<plugin>
