--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate=INFO
+logging.level.org.springframework.security=DEBUG
+logging.level.com.student_loan.security=TRACE
 
 # Springdoc Swagger API Config
 springdoc.api-docs.path=/api-docs
