--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<jacoco.version>0.8.7</jacoco.version>
         <doxygen.config.file>${basedir}/src/main/resources/Doxyfile</doxygen.config.file>
 		<maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -489,7 +490,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
+				<version>0.8.7</version>
 				<reportSets>
 					<reportSet>
 						<reports>
