--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -195,16 +195,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Plugin Surefire -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <argLine>${surefireArgLine}</argLine>
-                </configuration>
-            </plugin>
-
             <!-- JaCoCo plugin for coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -280,6 +270,13 @@
 				</executions>
 			</plugin>
 			-->
+			
+			<!-- XRef  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>3.4.0</version>
+			</plugin>
 
 			<!-- PMD for static code analysis -->
 			<plugin>
@@ -303,7 +300,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
 				<configuration>
+					<argLine>${surefireArgLine}</argLine>
 					<excludes>
 						<exclude>**/RestApiApplicationTests.java</exclude>
 						<exclude>**/integration/**</exclude>
