Basic javadoc style documentation and doxyfile for doxygen configuration

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,8 @@
 		<java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <doxygen.config.file>${basedir}/src/main/resources/Doxyfile</doxygen.config.file>
+  
 	</properties>
 
 	<dependencies>
@@ -189,6 +191,16 @@
     <build>
         <plugins>
 
+            <!-- Doxygen plugin -->
+
+			<plugin>
+				 <groupId>com.soebes.maven.plugins</groupId>
+				 <artifactId>doxygen-maven-plugin</artifactId>
+				 <version>1.1.0</version>
+				 <configuration>
+					 <configurationFile>${doxygen.config.file}</configurationFile>
+				 </configuration>
+			 </plugin>
             <!-- Spring Boot plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
