--- a/.github/workflows/maven-site-integration.yml
+++ b/.github/workflows/maven-site-integration.yml
@@ -1,4 +1,4 @@
-name: Maven Site &n Peformance & Integration Tests & prepares docs file where all project documentation will go
+name: Maven Site & Performance & Integration Tests & Docker
 
 on:
   push:
@@ -8,8 +8,10 @@ on:
     - cron: '0 18-23/2 * * *'  # 20:00–01:00 CET
     - cron: '0 0-6/2 * * *'    # 02:00–08:00 CET
 
-
-    
+env:
+  REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_BACKEND: ${{ env.REGISTRY }}/${{ github.repository }}-backend
+  IMAGE_FRONTEND: ${{ env.REGISTRY }}/${{ github.repository }}-frontend
 
 jobs:
   build-and-test:
@@ -47,7 +49,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Install Doxygen
+      - name: Install Doxygen & Graphviz
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
 
       - name: Wait for MySQL to be ready
@@ -56,28 +58,23 @@ jobs:
           until mysqladmin ping -h 127.0.0.1 -uroot -proot --silent; do
             sleep 2
           done
+
       - name: Create MySQL user 'e3'
         run: |
           mysql -h 127.0.0.1 -uroot -proot -e "CREATE USER IF NOT EXISTS 'e3'@'%' IDENTIFIED BY 'e3';"
           mysql -h 127.0.0.1 -uroot -proot -e "GRANT ALL PRIVILEGES ON mv.* TO 'e3'@'%'; FLUSH PRIVILEGES;"
-        
+
       - name: Run DB initialization script
         run: |
           echo "Running DB setup..."
           mysql -h 127.0.0.1 -uroot -proot < backend/src/main/resources/db-setup-e3.sql
 
-      #- name: Get into backend
-      #run: cd backend
-
-      # HACEMOS UNA PRUEBA DE CONEXION CON LA BD ANTES DE EJECUTAR LOS TESTS
       - name: Test MySQL manual connection
         run: |
           mysql -h 127.0.0.1 -uroot -proot -e "SHOW DATABASES;"
           mysql -h 127.0.0.1 -ue3 -pe3 -e "SHOW TABLES IN mv;"
 
-
-
-      - name: Run Unit tests and generate converage report
+      - name: Run Unit tests and generate coverage report
         run: mvn test jacoco:report
         working-directory: backend
       
@@ -86,7 +83,7 @@ jobs:
         working-directory: backend
 
       - name: Run Performance Tests
-        run: mvn test -Pperformance 
+        run: mvn test -Pperformance
         working-directory: backend
 
       - name: Generate Maven Site
@@ -97,7 +94,7 @@ jobs:
         run: ls -la target/
         working-directory: backend
 
-      - name: Ensure that the performance reports are also moved into the target\site\reports folder
+      - name: Ensure performance reports in site folder
         run: mvn -Pperformance resources:copy-resources@copy-perf-report
         working-directory: backend
 
@@ -109,37 +106,94 @@ jobs:
           mkdir -p docs
           pandoc README.md -o docs/index.html
 
-      - name: Create Doxygen output folder
-        run: mkdir -p ../../../target/doxygen
-        working-directory: backend/src/main/resources
-      
-      - name: Run Doxygen
-        run: doxygen Doxyfile
-        working-directory: backend/src/main/resources
+      - name: Generate Doxygen documentation
+        run: doxygen src/main/resources/Doxyfile
+        working-directory: backend
         
-      - name: Copy site output to docs/site and docs/doxygen folder to docs/doxygen
+      - name: Copy site & doxygen to docs/
         run: |
-          mkdir -p docs
-          mkdir -p docs/site
-          mkdir -p docs/doxygen
-          if [ -d "target/site" ]; then
-            cp -r target/site/* docs/site/
-          else
-            echo "No site generated. Skipping copy of site."
-          fi
-          if [ -d "target/doxygen" ]; then
-            cp -r target/doxygen/* docs/doxygen/
-          else
-            echo "No doxygen generated. Skipping copy of doxygen."
-          fi
+          mkdir -p docs/site docs/doxygen
+          cp -r target/site/* docs/site/ || echo "No site generated."
+          cp -r target/doxygen/* docs/doxygen/ || echo "No doxygen generated."
 
       - name: Commit and push docs
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add -f docs
-          git commit -m "Update Maven site [CI skip]" || echo "No changes to commit"
+          git commit -m "Update Maven site & docs [CI skip]" || echo "No changes to commit"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  docker-build-and-push:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push backend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ${{ env.IMAGE_BACKEND }}:latest
+            ${{ env.IMAGE_BACKEND }}:${{ github.sha }}
+
+      - name: Build & push frontend image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ${{ env.IMAGE_FRONTEND }}:latest
+            ${{ env.IMAGE_FRONTEND }}:${{ github.sha }}
+
+  compose-integration-test:
+    needs: docker-build-and-push
+    runs-on: ubuntu-latest
+    services:
+      docker:
+        image: docker:24.0.5-dind
+        privileged: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Pull images
+        run: |
+          docker pull ${{ env.IMAGE_BACKEND }}:latest
+          docker pull ${{ env.IMAGE_FRONTEND }}:latest
+
+      - name: Bring up services with docker-compose
+        run: |
+          docker-compose up -d --build
+
+      - name: Wait for services
+        run: sleep 20
+
+      - name: Health check backend API
+        run: curl --fail http://localhost:8080/actuator/health
+
+      - name: Health check frontend
+        run: curl --fail http://localhost:3000
+
+      - name: Tear down
+        run: docker-compose down --volumes
