--- a/.github/workflows/maven-site-integration.yml
+++ b/.github/workflows/maven-site-integration.yml
@@ -158,7 +158,7 @@ jobs:
           tags: |
             ghcr.io/tu-org/frontend:latest
             ghcr.io/tu-org/frontend:${{ github.sha }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & push Backend image
         uses: docker/build-push-action@v3
@@ -169,4 +169,4 @@ jobs:
           tags: |
             ghcr.io/tu-org/backend:latest
             ghcr.io/tu-org/backend:${{ github.sha }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
